# crm-analytics

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/crm_analytics/alert/: alert_engine.py
src/crm_analytics/api/: app.py  cache.py
src/crm_analytics/api/routes/: dashboard.py  performance.py
src/crm_analytics/db/: connection.py  schema.sql
src/crm_analytics/flink/: job.py  sinks.py  sources.py
src/crm_analytics/flink/operators/: aggregation.py  anomaly.py
tests/: conftest.py  test_aggregation.py  test_alert_engine.py  test_anomaly.py  test_api.py
