[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crm-analytics"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "apache-flink==1.19.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "confluent-kafka>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "fakeredis>=2.23.0",
    "testcontainers[postgres,kafka]>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
